# borscht-public-governance-os

./: .gitignore  AGENTS.md  AUTHORS  CONTRIBUTORS.md  Dockerfile  GEMINI.md  LICENSE  README.md  README.ru.md  docker-compose.yml  pyproject.toml
.cursor/rules/: borscht-public.mdc
.github/: CODEOWNERS
.github/workflows/: ci.yml
apps/api/: server.py
apps/cli/: borscht
apps/ui/: index.html  package-lock.json  package.json  vite.config.ts
apps/ui/src/: App.tsx  api.ts  i18n.tsx  styles.css
apps/ui/src/components/: ui.tsx
apps/ui/src/pages/: Approvals.tsx  Evaluations.tsx  NewRun.tsx  Observability.tsx  Overview.tsx  Policies.tsx  RunDetail.tsx  Runs.tsx  Settings.tsx  Templates.tsx
docs/: architecture.md  policies.md  quickstart.md  templates.md
docs/ru/: architecture.md  policies.md  quickstart.md  templates.md
docs/specs/: 00-necessary-and-sufficient.md  01-modules-and-ui.md  02-ui-ux-screens.md
examples/content-publish/: README.md  signal.json
examples/marketing-review/: README.md  signal.json
examples/spend-approval/: README.md  signal.json
scripts/: full_scenario_run.py  serve.sh
tests/: test_smoke.py
